--- a/css/style.css
+++ b/css/style.css
@@ -8556,7 +8556,7 @@ h1, h2, h3, h4, h5,
           /*LETRAS DE BIENVENIDA*/
           .owl-carousel.home-slider .slider-item .slider-text h1 span {
             font-weight: 800;
-            color: #507F80; }
+            color: #b1b493; }
           @media (max-width: 991.98px) {
             .owl-carousel.home-slider .slider-item .slider-text h1 {
               color: #000000;
